# gofuncyourself

./: README.md  gofuncyourself.py  pyproject.toml  test_gofuncyourself.py
