[tool.poetry]
name = "gofuncyourself"
version = "0.1.0"
description = "Go-like error handling, but with a twist"
authors = ["L3viathan <git@l3vi.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
